--- a/src/style/_Reviews.scss
+++ b/src/style/_Reviews.scss
@@ -1,5 +1,5 @@
 .movie-details-main-reviews-container {
-  box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
+  border: rgba($primary-color, 0.4) 2px solid;
   padding: 2rem;
 
   text-align: justify;
@@ -9,7 +9,7 @@
   }
 
   &-link {
-    color: $tertiary-font-color;
+    color: rgba($primary-color, 0.8);
     text-decoration: none;
 
     p {
@@ -29,16 +29,6 @@
     &-author {
       margin-bottom: 1rem;
     }
-
-    &-link {
-      color: $tertiary-font-color;
-      text-decoration: none;
-
-      p {
-        margin-top: 2rem;
-        font-style: italic;
-      }
-    }
   }
 }
 @media screen and (min-width: 601px) and (max-width: 1170px) {
@@ -51,38 +41,17 @@
     &-author {
       margin-bottom: 1rem;
     }
-
-    &-link {
-      color: $tertiary-font-color;
-      text-decoration: none;
-
-      p {
-        margin-top: 2rem;
-        font-style: italic;
-      }
-    }
   }
 }
 
 @media screen and(min-width: 1171px) {
   .movie-details-main-reviews-container {
-    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.75);
     padding: 2rem;
     margin: 1rem 2rem 2rem 3rem;
     text-align: justify;
     border-radius: 5px;
     &-author {
       margin-bottom: 1rem;
-    }
-
-    &-link {
-      color: $tertiary-font-color;
-      text-decoration: none;
-
-      p {
-        margin-top: 2rem;
-        font-style: italic;
-      }
     }
   }
 }
